--- a/backend/package.json
+++ b/backend/package.json
@@ -6,24 +6,27 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "mongodb": "^2.2.35",
-    "ejs": "^2.5.9",
-    "mongoose": "^5.0.17",
-    "passport": "~0.3.2",
-    "passport-local": "~1.0.0",
-    "passport-facebook": "~2.1.1",
-    "passport-twitter": "~1.0.4",
-    "passport-google-oauth": "~1.0.0",
-    "connect-flash": "~0.1.1",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.15.2",
+    "connect-flash": "~0.1.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "ejs": "^2.5.9",
+    "nodemailer": "latest",
+    "nexmo": "^2.2.1",
+    "twilio": "^3.16.0",
+    "express": "~4.16.0",
+    "express-session": "~1.14.1",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
     "method-override": "~2.3.6",
-    "express-session": "~1.14.1"
+    "mongodb": "^2.2.35",
+    "mongoose": "^5.0.17",
+    "morgan": "~1.7.0",
+    "passport": "~0.3.2",
+    "passport-facebook": "~2.1.1",
+    "passport-google-oauth": "~1.0.0",
+    "passport-local": "~1.0.0",
+    "passport-twitter": "~1.0.4"
   }
 }
