--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,16 @@
     "nodemailer": "latest",
     "nexmo": "^2.2.1",
     "twilio": "^3.16.0",
-    "express": "~4.16.0",
+    "express": "latest",
+    "helmet": "latest",
+    "compression": "latest",
+    "boom": "latest",
+    "winston": "latest",
+    "jsonwebtoken": "latest",
+    "passport-jwt": "latest",
+    "http-status-codes": "latest",
+    "redis": "latest",
+    "csurf": "latest",
     "express-session": "~1.14.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
